@@ -3697,7 +3697,11 @@ skip_block: ;
     fputc ('\n', stderr);
   }
 #endif
+
   size = iheight*iwidth;
+#if defined(LIBRAW_USE_OPENMP)
+#pragma omp parallel for private(val) default(shared)
+#endif
   for (i=0; i < size*4; i++) {
     val = image[0][i];
     if (!val) continue;
@@ -4548,7 +4552,7 @@ void CLASS parse_thumb_note (int base, unsigned toff, unsigned tlen)
   }
 }
 
-#line 5025 "dcraw/dcraw.c"
+#line 5029 "dcraw/dcraw.c"
 void CLASS parse_makernote (int base, int uptag)
 {
   static const uchar xlat[2][256] = {
@@ -5126,7 +5130,7 @@ void CLASS parse_kodak_ifd (int base)
   }
 }
 
-#line 5607 "dcraw/dcraw.c"
+#line 5611 "dcraw/dcraw.c"
 int CLASS parse_tiff_ifd (int base)
 {
   unsigned entries, tag, type, len, plen=16, save;
@@ -6410,7 +6414,7 @@ void CLASS parse_redcine()
     data_offset = get4();
   }
 }
-#line 6897 "dcraw/dcraw.c"
+#line 6901 "dcraw/dcraw.c"
 void CLASS adobe_coeff (const char *p_make, const char *p_model)
 {
   static const struct {
@@ -7113,7 +7117,7 @@ short CLASS guess_byte_order (int words)
   return sum[0] < sum[1] ? 0x4d4d : 0x4949;
 }
 
-#line 7603 "dcraw/dcraw.c"
+#line 7607 "dcraw/dcraw.c"
 
 float CLASS find_green (int bps, int bite, int off0, int off1)
 {
@@ -8743,7 +8747,7 @@ else if (!strcmp(model,"QV-2000UX")) {
   }
 }
 
-#line 9326 "dcraw/dcraw.c"
+#line 9330 "dcraw/dcraw.c"
 void CLASS convert_to_rgb()
 {
   int row, col, c, i, j, k;
@@ -8962,7 +8966,7 @@ int CLASS flip_index (int row, int col)
   return row * iwidth + col;
 }
 
-#line 9569 "dcraw/dcraw.c"
+#line 9573 "dcraw/dcraw.c"
 void CLASS tiff_set (ushort *ntag,
 	ushort tag, ushort type, int count, int val)
 {
